# wxclicker

./: CMakeLists.txt
src/: .gitignore  CMakeLists.txt
src/application/: ClickerApplication.cxx  ClickerApplication.hxx
src/buildinfo/: BuildInfo.hxx.in
src/mouse/: IMouseInputBackend.hxx  MouseButton.hxx  MouseInputBackendRegistry.cxx  MouseInputBackendRegistry.hxx  RegisterPlatformBackends.cxx  RegisterPlatformBackends.hxx
src/mouse/gnulinux/: UinputMouseInputBackend.cxx  UinputMouseInputBackend.hxx
src/mouse/linux/: RegisterPlatformBackends.cxx
src/mouse/win32/: BaseMouseInputBackend.cxx  BaseMouseInputBackend.hxx  NtUserSendInputBackend.cxx  NtUserSendInputBackend.hxx  RegisterPlatformBackends.cxx  SendInputBackend.cxx  SendInputBackend.hxx
src/mouse/x11/: XTestMouseInputBackend.cxx  XTestMouseInputBackend.hxx
src/resource/: WxClicker.rc
src/services/: AutoClicker.cxx  AutoClicker.hxx
src/ui/: ClickerFrame.cxx  ClickerFrame.hxx  PickScreenPointDialog.cxx  PickScreenPointDialog.hxx
